--- a/Main.html
+++ b/Main.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <img id="ava" class ="rounded-circle" height="30%" src="https://sun9-40.userapi.com/impg/l5MeG6ZqUt6Qw8b9JV7QOjQ5hYF1sXJWYvzvxA/i2ZA1W1mdos.jpg?size=1195x1600&quality=96&sign=436c45beecba37061cefc7a30b1d7c03&type=album" alt="Avatar">
+          </div>
+          <div class="col-4">
+            <h1>Привет. Меня зовут Павел. Я учусь в Многопрофильном колледже ТГТУ. Мне нравится изучать различные языки программирования.</h1> 
+           <p>Я знаю такие языки,как:</p>
+           <ul>
+               <li>C++</li>
+               <li>JavaScript</li>
+               <li>Python</li>
+           </ul>
+          </div>
+          <div class="col-4">
+            <p class="social-media">Мои соцсети:</p>
+          </div>
+        </div>
+      </div> 
 </body>
 </html>
