--- a/Main.html
+++ b/Main.html
@@ -11,20 +11,21 @@
 <body>
     <div class="container">
         <div class="row">
-          <div class="col-4">
-            <img id="ava" class ="rounded-circle" height="30%" src="https://sun9-40.userapi.com/impg/l5MeG6ZqUt6Qw8b9JV7QOjQ5hYF1sXJWYvzvxA/i2ZA1W1mdos.jpg?size=1195x1600&quality=96&sign=436c45beecba37061cefc7a30b1d7c03&type=album" alt="Avatar">
+          <div class="col col-6">
+            <img id="ava" width="100%" src="1.jpg" alt="Avatar">
+            <p class="social">Мои соцсети:</p>
+            <a href ="https://www.instagram.com/spaceun1c/"><img class ="img-social" src="2.jpg" height="30">Instagram</a><br>
+            <a href = "https://vk.com/spaceun1c"><img class ="img-social" src="3.png" height="30">VK</a><br>
+            <a href ="https://github.com/SpaceUn1c"><img class ="img-social" src="4.png" height="30">GitHub</a><br>
           </div>
-          <div class="col-4">
-            <h1>Привет. Меня зовут Павел. Я учусь в Многопрофильном колледже ТГТУ. Мне нравится изучать различные языки программирования.</h1> 
-           <p>Я знаю такие языки,как:</p>
-           <ul>
+          <div class="col-6">
+            <h1 class="text-centr">Привет. Меня зовут Павел. Я учусь в Многопрофильном колледже ТГТУ. Мне нравится изучать различные языки программирования.</h1> 
+           <p class="text-centr">Я знаю такие языки,как:</p>
+           <ul class ="languages">
                <li>C++</li>
                <li>JavaScript</li>
                <li>Python</li>
            </ul>
-          </div>
-          <div class="col-4">
-            <p class="social-media">Мои соцсети:</p>
           </div>
         </div>
       </div> 
